--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     spdep
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
