add packages used in the vignette to Suggests: in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,10 @@ Imports:
     spdep
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    cluster,
+    dplyr,
+    ggplot2,
+    gridExtra,
+    spData
 VignetteBuilder: knitr
